# dotman

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
docs/: cli.md  code-structure.md  config.md  design.md  edit-mode-v2.md  repository.md  snapshot.md  target-refs.md  templates.md  trackables.md
docs/adr/: 0001-plan-operation-guards.md  0002-own-structured-transforms-in-dotman.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
examples/: README.md
examples/repo/: README.md  local.toml
plans/: add-command-plan.md  edit-command-sugar-plan.md  edit-command-target-plan.md  formal-pull-push-execution.md  gitignore-style-ignore-patterns.md  jinja-patch-capture.md  package-hook-metadata-and-noop-selection.md  repo-and-target-hooks.md  soft-guard-hook-semantics.md  target-dot-identifier-and-hook-summary-ui.md  target-refs-plan.md  target-sync-policy.md  yes-and-run-noop-mode.md
plans/completed/: add-command-plan.md  directory-child-capture-render.md  edit-command-sugar-plan.md  (+21 more)
src/: test_support.py
tests/: conftest.py  helpers.py  test_atomic_files.py  test_capture.py  test_cli.py  test_cli_emit.py  test_diff_review.py  test_elevation.py  test_engine.py  test_exception_types.py  test_json_transform.py  test_plist_nested_paths.py  test_plist_root_cli.py  test_plist_transform.py  test_privileged_ops.py  test_profiles.py  test_progress.py  test_reconcile.py  test_resolver.py  test_templates.py  test_terminal.py  test_toml_root_cli.py  test_toml_transform.py  test_transform_cli.py  test_xml_root_cli.py  test_xml_transform.py
(+156 files in other folders)
