[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "dotman"
version = "0.1.0"
description = "Dry-run planner for the package-oriented dotman engine"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "tqdm>=4.67.0",
  "Jinja2>=3.1.4",
  "pathspec>=1.0.4",
  "prompt-toolkit>=3.0.52",
  "tomlkit>=0.13.3",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
dotman = "dotman.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dotman"]

[tool.pytest.ini_options]
testpaths = ["tests"]
